package com.ecodrive.app.vehicle.plate.data

/**
 * Format physique de la plaque.
 */
enum class PlateFormat {
    UNKNOW,
    STANDARD,       // Voiture : paysage ~520x110mm
    MOTORCYCLE     // Moto : portrait ou carré ~130x170mm
}